[compat] Compatibility updates for React 15.5.0
Refactor React.PropTypes and React.createClass references.

--- a/upgrade-guides/v2.4.0.md
+++ b/upgrade-guides/v2.4.0.md
@@ -10,7 +10,7 @@ In order to more easily access the `router` object, a `withRouter` higher-order 
 import React from 'react'
 import { withRouter } from 'react-router'
 
-const Page = React.createClass({
+const Page = createReactClass({
   componentDidMount() {
     this.props.router.setRouteLeaveHook(this.props.route, () => {
       if (this.state.unsaved)
