--- a/upgrade-guides/v2.0.0.md
+++ b/upgrade-guides/v2.0.0.md
@@ -113,7 +113,7 @@ Access `location` from `this.props.location` of your `Route` component. If you'd
 
 ```js
 // v2.0.x
-const RouteComponent = React.createClass({
+const RouteComponent = createReactClass({
   childContextTypes: {
     location: React.PropTypes.object
   },
@@ -132,12 +132,12 @@ Since [`context` is now documented](https://facebook.github.io/react/docs/contex
 
 ```js
 // 1.x
-const RouteComponent = React.createClass({
+const RouteComponent = createReactClass({
   mixins: [ RouteContext ]
 })
 
 // 2.0.0
-const RouteComponent = React.createClass({
+const RouteComponent = createReactClass({
   contextTypes: {
     route: React.PropTypes.object
   },
@@ -153,7 +153,7 @@ const RouteComponent = React.createClass({
 
 ```js
 // v1.0.x
-const RouteComponent = React.createClass({
+const RouteComponent = createReactClass({
   mixins: [ Lifecycle ],
   routerWillLeave() {
     // ...
@@ -161,7 +161,7 @@ const RouteComponent = React.createClass({
 })
 
 // v2.0.0
-const RouteComponent = React.createClass({
+const RouteComponent = createReactClass({
   contextTypes: {
     router: React.PropTypes.object.isRequired
   },
@@ -198,14 +198,14 @@ router.replace({ pathname, query, state }) // new "location descriptor"
 
 ```js
 // v1.0.x
-const RouteComponent = React.createClass({
+const RouteComponent = createReactClass({
   someHandler() {
     this.props.history.pushState(...)
   }
 })
 
 // v2.0.0
-const RouteComponent = React.createClass({
+const RouteComponent = createReactClass({
   contextTypes: {
     router: React.PropTypes.object.isRequired
   },
@@ -219,7 +219,7 @@ const RouteComponent = React.createClass({
 
 ```js
 // v1.0.x
-const DeepComponent = React.createClass({
+const DeepComponent = createReactClass({
   mixins: [ History ],
 
   someHandler() {
@@ -230,7 +230,7 @@ const DeepComponent = React.createClass({
 // v2.0.0
 // You have a couple options:
 // 1) Use context.router (especially if on the server)
-const DeepComponent = React.createClass({
+const DeepComponent = createReactClass({
   contextTypes: {
     router: React.PropTypes.object.isRequired
   },
@@ -241,7 +241,7 @@ const DeepComponent = React.createClass({
 
 // 2) Use the singleton history
 import { browserHistory } from 'react-router'
-const DeepComponent = React.createClass({
+const DeepComponent = createReactClass({
   handleSubmit() {
     browserHistory.push(...)
   }
